--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -6,11 +6,11 @@
 	padding: 10px 0;
 	box-shadow: inset 0px -4px 6px rgba(0,0,0,0.40);
 	.wrapper {
-		@include flex(row wrap);
+		@include flex-flow(row wrap);
 		align-items: center;
 	}
 	.menu-social-container {
-		flex: 1 1 0%;
+		@include flex(base);
 	}
 }
 
@@ -54,7 +54,7 @@
 	border-bottom: 1px solid $color-08;
 	font-size: rem(14px);
 	.wrapper {
-		@include flex(row nowrap);
+		@include flex-flow(row nowrap);
 		align-items: center;
 	}
 }
@@ -67,7 +67,7 @@
 	z-index: 2;
 	margin: 0 0 0 auto;
 	.menu {
-		@include flex(row wrap);
+		@include flex-flow(row wrap);
 		border-left: 1px solid $color-05 + #000;
 		border-right: 1px solid $color-05 - #222;
 		li a {
@@ -173,7 +173,7 @@
 	}
 	.header-content {
 		height: 100%;
-		@include flex(column nowrap);
+		@include flex-flow(column nowrap);
 		justify-content: center;
 		align-items: flex-end;
 		.site-name, .site-description {
@@ -203,7 +203,7 @@
 	}
 	.header-content {
 		height: 100%;
-		@include flex(column nowrap);
+		@include flex-flow(column nowrap);
 		justify-content: center;		
 		h1 {
 			margin: 0;
