--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -103,9 +103,9 @@
 }
 
 .row {
-	@include flex(row wrap);
+	@include flex-flow(row wrap);
 	.column {
-		flex: 1 1 0%;
+		@include flex(base);
 	}
 	&.row-10 {
 		margin: 0 -10px;
@@ -135,10 +135,10 @@
 .content {
 	margin: 30px 0;
 	.wrapper {
-		@include flex(row nowrap);
+		@include flex-flow(row nowrap);
 	}
 	article {
-		flex: 1 1 0%;
+		@include flex(base);
 	}
 	aside {
 		flex: 0 0 270px;
