--- a/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
@@ -66,8 +66,11 @@
 	}
 	.row {
 		justify-content: center;		
-		.column {
+		.book-column {
+			@include flex;
+			width: 25%;
 			max-width: 220px;
+			padding: 0 10px;
 			a {		
 				display: block;
 				width: 100%;
