Change to navigation and caption style for ie

--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -191,8 +191,9 @@
 	}
 	.navigation-links ul {
 		margin: 0 -10px -5px -10px;
+		@include flex-flow(row nowrap);
 		li {
-			@include inline-block(top);
+			@include flex(grow);
 			width: 50%;
 			padding: 0 10px;
 			margin: 0 0 5px 0;
