--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -554,10 +554,7 @@
 
 	// layout.scss
 	.content article .navigation-links ul {
-		li {
-			display: block;
-			width: auto;
-		}
+		@include flex-reset('li');
 		li.next {
 			text-align: left;
 			a {
