Add display property for link element in ie10

--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -32,7 +32,8 @@
 ========================================================================== */
 
 #top-bar .home-link {
-	@include sizing(auto, 20px);
+	display: block;
+	height: 20px;
 	flex: 0 0 35px;
 	text-align: right;
 	.icon {
