--- a/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
@@ -81,6 +81,10 @@ a.button, .insprvw-recent-reviews .review .read-more a, #about-site .read-more a
 	padding: 0;
 }
 
+.wpcf7-recaptcha {
+	margin: 0 0 20px 0;
+}
+
 /* Search form
 ========================================================================== */
 
