--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -326,6 +326,15 @@
 		}
 	}
 
+	// front-page.scss
+	#front-page-sections #recent-reviews .owl-carousel .owl-controls {
+		.owl-prev, .owl-next {
+			.icon:hover {
+				color: inherit;
+			}
+		}
+	}
+	
 	// layout.scss
 	.content {
 		.wrapper {
@@ -393,6 +402,9 @@
 		left: 0;
 		bottom: 20px;
 		margin: auto;
+		&:hover .icon {
+			color: inherit;
+		}
 	}	
 	.scroll-to-top {
 		right: 50px;
