--- a/themusescircle/dev/themes/musescircle/assets/scss/_vendors.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_vendors.scss
@@ -56,8 +56,8 @@
 
 @media all {
 	.featherlight {
-		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-		backface-visibility: hidden;
+		// -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+		// backface-visibility: hidden;
 		display: none;
 		/* dimensions: spanning the background from edge to edge */
 		position: fixed;
