--- a/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
@@ -15,6 +15,8 @@ html, body {
 body { 
 	height: 100%;
 	background: $color-04; 	
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	backface-visibility: hidden;	
 }
 
 img {
